force-app/main/default/objects/VI_DonneesParcours__c/VI_DonneesParcours__c.object-meta.xml
<CustomObject>
    <description>Objet ayant pour objectif de stocker toutes les informations pouvant nécessiter une adaptation ou une mise à jour facile.</description>
    <label>Données Parcours</label>
    <nameField>
        <label>Nom de Données Parcours</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Données Parcours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>