force-app/main/default/objects/VI_DonneesParcours__c/fields/Description_Option_Elec_Vert_2__c.field-meta.xml
<CustomField>
    <fullName>Description_Option_Elec_Vert_2__c</fullName>
    <label>Description Option Elec Vert 2</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>