force-app/main/default/objects/VI_DonneesParcours__c/fields/Description_Option_Gaz_Vert__c.field-meta.xml
<CustomField>
    <fullName>Description_Option_Gaz_Vert__c</fullName>
    <label>Description Option Gaz Vert</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>