force-app/main/default/objects/VI_DonneesParcours__c/fields/Etape__c.field-meta.xml
<CustomField>
    <fullName>Etape__c</fullName>
    <description>Champ pour saisir l&apos;étape à laquelle correspond l&apos;information dynamique</description>
    <label>Etape</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Identification besoin</fullName>
            </value>
            <value>
                <fullName>Identification client</fullName>
            </value>
            <value>
                <fullName>Identification local</fullName>
            </value>
            <value>
                <fullName>Estimation de la consommation</fullName>
            </value>
            <value>
                <fullName>Constitution du panier client</fullName>
            </value>
            <value>
                <fullName>Informations complémentaires</fullName>
            </value>
            <value>
                <fullName>Saisie des moyens de paiement</fullName>
            </value>
            <value>
                <fullName>Récapitulatif de l’offre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>