force-app/main/default/objects/VI_DonneesParcours__c/fields/Question_RGPD_2__c.field-meta.xml
<CustomField>
    <fullName>Question_RGPD_2__c</fullName>
    <label>Question RGPD 2</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>