force-app/main/default/objects/VI_DonneesParcours__c/fields/VI_CHFScript1__c.field-meta.xml
<CustomField>
    <fullName>VI_CHFScript1__c</fullName>
    <description>Champ pour saisir le contenu du script d&apos;aide au discours pour le CHF correspondant à l&apos;étape de l&apos;enregistrement</description>
    <label>CHF Script 1</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>