force-app/main/default/objects/VI_DonneesParcours__c/fields/VI_CHFScript2__c.field-meta.xml
<CustomField>
    <fullName>VI_CHFScript2__c</fullName>
    <description>Champ pour saisir un complément au contenu de &quot;CHF Script1&quot;</description>
    <label>CHF Script 2</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>