force-app/main/default/objects/VI_DonneesParcours__c/fields/VI_Description_Option_Elec_v__c.field-meta.xml
<CustomField>
    <fullName>VI_Description_Option_Elec_v__c</fullName>
    <description>Champ pour stocker le détail de la description de l&apos;option verte pour l&apos;électricité</description>
    <label>Description  Option Elec Verte</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>