force-app/main/default/objects/VI_DonneesParcours__c/fields/VI_DescriptionAssuranceFacture1__c.field-meta.xml
<CustomField>
    <fullName>VI_DescriptionAssuranceFacture1__c</fullName>
    <label>Description Assurance facture 1</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>