force-app/main/default/objects/VI_DonneesParcours__c/fields/VI_DonneesGDPR__c.field-meta.xml
<CustomField>
    <fullName>VI_DonneesGDPR__c</fullName>
    <description>Pour renseigner les règles GDPR et faciliter leur mise à jour si les informations changent</description>
    <label>Données GDPR</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>