force-app/main/default/objects/VI_DonneesParcours__c/fields/VI_EM_DUAL_Script_2__c.field-meta.xml
<CustomField>
    <fullName>VI_EM_DUAL_Script_2__c</fullName>
    <label>EM DUAL - Script 2</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>