force-app/main/default/objects/VI_DonneesParcours__c/fields/VI_EM_Gaz_Script_1__c.field-meta.xml
<CustomField>
    <fullName>VI_EM_Gaz_Script_1__c</fullName>
    <label>EM GAZ - Script 1</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>