force-app/main/default/objects/VI_DonneesParcours__c/fields/VI_EmailRelanceCPV1__c.field-meta.xml
<CustomField>
    <fullName>VI_EmailRelanceCPV1__c</fullName>
    <description>Contenu du champ { VI_Email_Relance_CPV } de l&apos;email template &quot;Email n°5 - Relance CPV&quot;  pour la première relance.</description>
    <label>Email Relance CPV 1</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>