force-app/main/default/objects/VI_DonneesParcours__c/fields/VI_EmailRelanceCPV3__c.field-meta.xml
<CustomField>
    <fullName>VI_EmailRelanceCPV3__c</fullName>
    <description>Contenu du champ { VI_Email_Relance_CPV } de l&apos;email template &quot;Email n°5 - Relance CPV&quot;  pour la troisième relance.</description>
    <label>Email Relance CPV 3</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>