force-app/main/default/objects/VI_DonneesParcours__c/fields/VI_EMScript1__c.field-meta.xml
<CustomField>
    <fullName>VI_EMScript1__c</fullName>
    <description>Champ pour saisir le contenu du discours pour l&apos;EM correspondant à l&apos;étape de l&apos;enregistrement</description>
    <label>EM Script 1</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>