force-app/main/default/objects/VI_DonneesParcours__c/fields/VI_EMScript2__c.field-meta.xml
<CustomField>
    <fullName>VI_EMScript2__c</fullName>
    <description>Champ pour saisir un complément au contenu de &quot;EM Script1&quot;</description>
    <label>EM Script 2</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>