force-app/main/default/objects/VI_DonneesParcours__c/fields/VI_NomPartenaire__c.field-meta.xml
<CustomField>
    <fullName>VI_NomPartenaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Champ qui permet de lier les données vente à un compte</description>
    <label>Nom du partenaire</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Données Parcours</relationshipLabel>
    <relationshipName>Donnees_Parcours</relationshipName>
    <type>Lookup</type>
</CustomField>