force-app/main/default/objects/VI_DonneesParcours__c/fields/VI_PrisenCompte_Choix_energie__c.field-meta.xml
<CustomField>
    <fullName>VI_PrisenCompte_Choix_energie__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prise en compte choix énergie</label>
    <type>Checkbox</type>
</CustomField>