force-app/main/default/objects/VI_DonneesParcours__c/fields/VI_RelanceCPV3_J__c.field-meta.xml
<CustomField>
    <fullName>VI_RelanceCPV3_J__c</fullName>
    <description>Troisième relance des CPV à J+</description>
    <label>Relance CPV 3 : J+</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>