force-app/main/default/objects/VI_DonneesParcours__c/recordTypes/Labels.recordType-meta.xml
<RecordType>
    <fullName>Labels</fullName>
    <active>true</active>
    <description>Pour stocker les différentes informations du parcours nécessitant d&apos;être mise à jour (Exemple GDPR, mentions légales, textes d&apos;aide, messages d&apos;erreur etc)</description>
    <label>Labels</label>
</RecordType>