force-app/main/default/objects/VI_DonneesParcours__c/recordTypes/VI_Relance_CPV.recordType-meta.xml
<RecordType>
    <fullName>VI_Relance_CPV</fullName>
    <active>true</active>
    <description>Pour stocker les différentes informations concernant la relance des CPV</description>
    <label>Relance CPV</label>
</RecordType>