force-app/main/default/objects/VI_DonneesParcours__c/recordTypes/VI_Scripts.recordType-meta.xml
<RecordType>
    <fullName>VI_Scripts</fullName>
    <active>true</active>
    <description>Pour stocker toutes les mentions de discours faisant partie des scripts d&apos;aide à la vente pour les Conseillers Pure Players</description>
    <label>Scripts</label>
</RecordType>