force-app/main/default/objects/VI_DonneesParcours__c/listViews/VI_Labels.listView-meta.xml
<ListView>
    <fullName>VI_Labels</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>VI_DonneesParcours__c.Labels</value>
    </filters>
    <label>Labels</label>
</ListView>