force-app/main/default/objects/VI_DonneesParcours__c/listViews/VI_Relances_CPV.listView-meta.xml
<ListView>
    <fullName>VI_Relances_CPV</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>VI_DonneesParcours__c.VI_Relance_CPV</value>
    </filters>
    <label>Relances CPV</label>
</ListView>