force-app/main/default/objects/VI_DonneesParcours__c/listViews/VI_Scripts.listView-meta.xml
<ListView>
    <fullName>VI_Scripts</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>VI_DonneesParcours__c.VI_Scripts</value>
    </filters>
    <label>Scripts</label>
</ListView>